perl-*: Adopt to SPDX license identifiers
Signed-off-by: Marcel Denia <naoir@gmx.net>

--- a/perl-compress-bzip2/Makefile
+++ b/perl-compress-bzip2/Makefile
@@ -15,7 +15,7 @@ PKG_SOURCE_URL:=http://www.cpan.org/authors/id/R/RU/RURBAN/
 PKG_SOURCE:=Compress-Bzip2-$(PKG_VERSION).tar.gz
 PKG_MD5SUM:=c4a1995df9443cb97c28593cbbb23304
 
-PKG_LICENSE:=GPLv1+ ARTISTIC
+PKG_LICENSE:=GPL-1.0+ Artistic-1.0-Perl
 PKG_MAINTAINER:=Marcel Denia <naoir@gmx.net>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/Compress-Bzip2-$(PKG_VERSION)
