--- a/micropython/Makefile
+++ b/micropython/Makefile
@@ -31,7 +31,7 @@ define Package/micropython
   CATEGORY:=Languages
   TITLE:=Micro Python
   URL:=http://micropython.org
-  DEPENDS:=+libc +libffi +libdl +libm
+  DEPENDS:=+libffi
 endef
 
 define Package/micropython/description
