--- a/perl/files/config.sh-mips.in
+++ b/perl/files/config.sh-mips.in
@@ -1109,7 +1109,7 @@ i_syspoll='define'
 #incpth='/usr/lib/gcc/i486-slackware-linux/4.8.2/include /usr/local/include /usr/lib/gcc/i486-slackware-linux/4.8.2/include-fixed /usr/include'
 ld_can_script='define'
 #libsfound=' /usr/lib/libgdbm.so /usr/lib/libdb.so /usr/lib/libdl.so /usr/lib/libm.so /usr/lib/libcrypt.so /usr/lib/libutil.so /usr/lib/libc.so'
-nv_overflows_integers_at='0'
+nv_overflows_integers_at='256.0*256.0*256.0*256.0*256.0*256.0*2.0*2.0*2.0*2.0*2.0'
 perl_static_inline='static __inline__'
 sGMTIME_max='2147483647'
 sGMTIME_min='-2147483648'
