micropython: update to latest and fix version info
Signed-off-by: Roger D <rogerdammit@gmail.com>

--- a/micropython/Makefile
+++ b/micropython/Makefile
@@ -8,7 +8,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=micropython
-PKG_VERSION=1.2-$(PKG_SOURCE_VERSION)
+PKG_VERSION=1.3-20140828-$(PKG_SOURCE_VERSION)
 PKG_RELEASE:=1
 
 PKG_MAINTAINER:=Roger D <rogerdammit@gmail.com>
@@ -17,7 +17,7 @@ PKG_LICENSE_FILES:=LICENSE
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/micropython/micropython.git
-PKG_SOURCE_VERSION:=86de21b810693bccdd88d53aacb6d8acf26f09e0
+PKG_SOURCE_VERSION:=110ba35980d03da2e744a8aadd85d08c0c06a23b
 
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION)
 PKG_SOURCE:=$(PKG_SOURCE_SUBDIR).tar.gz
