ruby: Disable doc generation
Docs are not currently packaged. So, there is no need to install
them. Also, doxygen have some problem with the usaged of git in
build_dir as it takes ages running git commands on every file.
Disabling the docs reduces the compilation time.

Signed-off-by: Luiz Angelo Daros de Luca <luizluca@gmail.com>

--- a/ruby/Makefile
+++ b/ruby/Makefile
@@ -16,7 +16,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ruby
 PKG_VERSION:=2.1.2
-PKG_RELEASE:=2
+PKG_RELEASE:=3
 
 PKG_LIBVER:=2.1
 
@@ -210,6 +210,8 @@ CONFIGURE_ARGS += \
 	--enable-static \
 	--disable-rpath \
 	--enable-ipv6 \
+	--disable-install-doc \
+	--disable-install-capi \
 	--with-ruby-version=minor \
 	--with-iconv-dir=$(ICONV_PREFIX) \
 
