perl: Make I8/I16/I32 types explicitly signed for PPC
Type signedness is undefined for char. char may actually be unsigned for
some CPUs.
This fixes various bugs on PPC, like negative array indices.

Signed-off-by: Marcel Denia <naoir@gmx.net>

--- a/perl/files/config.sh-powerpc.in
+++ b/perl/files/config.sh-powerpc.in
@@ -600,13 +600,13 @@ html1direxp=''
 html3dir=' '
 html3direxp=''
 i16size='2'
-i16type='short'
+i16type='signed short'
 i32size='4'
-i32type='long'
+i32type='signed long'
 i64size='8'
-i64type='long long'
+i64type='signed long long'
 i8size='1'
-i8type='char'
+i8type='signed char'
 i_arpainet='define'
 i_bsdioctl=''
 i_crypt='define'
